--- a/systemd/blutunnel.service
+++ b/systemd/blutunnel.service
@@ -6,8 +6,8 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/opt/blutunnel
-EnvironmentFile=/etc/blutunnel/blutunnel.env
-ExecStart=/usr/bin/python3 /opt/blutunnel/blutunnel.py --mode ${MODE} --bridge-port ${BRIDGE_PORT} --sync-port ${SYNC_PORT} --iran-ip ${IRAN_IP} --auto-sync ${AUTO_SYNC} --manual-ports ${MANUAL_PORTS}
+EnvironmentFile=-/etc/blutunnel/blutunnel.env
+ExecStart=/usr/bin/python3 /opt/blutunnel/blutunnel.py
 Restart=always
 RestartSec=3
 LimitNOFILE=1000000
